code break points included

--- a/index.html
+++ b/index.html
@@ -11,29 +11,38 @@
 </head>
 
 <body>
+
+<!----------------------------------- Navigation Menu with fixed position ----------------------------------->
     <header>
 
     </header>
-    <main>
+<!----------------------------------- Start of First Section or Hero Banner ----------------------------------->
+<main>
         <section>
 
         </section>
+<!---------------------------------------------- Start of Second Section   ----------------------------------------------->
         <section>
 
         </section>
+<!---------------------------------------------- Start of Third Section   ----------------------------------------------->
         <section>
 
         </section>
+ <!---------------------------------------------- Start of Fourth Section   ----------------------------------------------->
         <section>
 
         </section>
+<!---------------------------------------------- Start of Fifth Section   ----------------------------------------------->
         <section>
 
         </section>
+<!---------------------------------------------- Start of Sixth Section   ----------------------------------------------->
         <section>
 
         </section>
     </main>
+<!---------------------------------------------- Start of Footer Section   ----------------------------------------------->
 </body>
 
 </html>
