--- a/index.html
+++ b/index.html
@@ -1,48 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Bootstrap Website</title>
-</head>
+  </head>
 
-<body>
-
-<!----------------------------------- Navigation Menu with fixed position ----------------------------------->
-    <header>
-
-    </header>
-<!----------------------------------- Start of First Section or Hero Banner ----------------------------------->
-<main>
-        <section>
-
-        </section>
-<!---------------------------------------------- Start of Second Section   ----------------------------------------------->
-        <section>
-
-        </section>
-<!---------------------------------------------- Start of Third Section   ----------------------------------------------->
-        <section>
-
-        </section>
- <!---------------------------------------------- Start of Fourth Section   ----------------------------------------------->
-        <section>
-
-        </section>
-<!---------------------------------------------- Start of Fifth Section   ----------------------------------------------->
-        <section>
-
-        </section>
-<!---------------------------------------------- Start of Sixth Section   ----------------------------------------------->
-        <section>
-
-        </section>
+  <body>
+    <!----------------------------------- Navigation Menu with fixed position ----------------------------------->
+    <header></header>
+    <!----------------------------------- Start of First Section or Hero Banner ----------------------------------->
+    <main>
+      <section></section>
+      <!---------------------------------------------- Start of Second Section   ----------------------------------------------->
+      <section></section>
+      <!---------------------------------------------- Start of Third Section   ----------------------------------------------->
+      <section></section>
+      <!---------------------------------------------- Start of Fourth Section   ----------------------------------------------->
+      <section></section>
+      <!---------------------------------------------- Start of Fifth Section   ----------------------------------------------->
+      <section></section>
+      <!---------------------------------------------- Start of Sixth Section   ----------------------------------------------->
+      <section></section>
     </main>
-<!---------------------------------------------- Start of Footer Section   ----------------------------------------------->
-</body>
-
+    <!---------------------------------------------- Start of Footer Section   ----------------------------------------------->
+  </body>
 </html>
