--- a/index.html
+++ b/index.html
@@ -29,7 +29,93 @@
       <!---------------------------------------------- Start of Third Section   ----------------------------------------------->
       <section></section>
       <!---------------------------------------------- Start of Fourth Section   ----------------------------------------------->
-      <section></section>
+      <section class="py-5" style="background-color: #252b42">
+        <div class="container text-center text-wrap pb-5 text-light">
+          <h2>Industry</h2>
+          <p style="width: 29rem" class="mx-auto">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+        </div>
+        <div class="d-flex flex-sm-wrap justify-content-center gap-3">
+          <div class="card text-bg-dark" style="width: 20rem">
+            <img
+              src="./assets/img/post.1.jpg"
+              class="card-img opacity-50"
+              style="height: 27rem"
+              alt="..."
+            />
+            <div class="card-img-overlay d-flex align-items-end">
+              <div class="text-light">
+                <h5 class="card-title">Tax Management</h5>
+                <p class="card-text">
+                  Life Tips From Top Ten Adventure Travelers
+                </p>
+                <button class="btn btn-primary btn-md rounded-pill">
+                  View Project
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card text-bg-dark" style="width: 20rem">
+            <img
+              src="./assets/img/post.2.jpg"
+              class="card-img opacity-50"
+              style="height: 27rem"
+              alt="..."
+            />
+            <div class="card-img-overlay d-flex align-items-end">
+              <div class="text-light">
+                <h5 class="card-title">Tax Management</h5>
+                <p class="card-text">
+                  Life Tips From Top Ten Adventure Travelers
+                </p>
+                <button class="btn btn-primary btn-md rounded-pill">
+                  View Project
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card text-bg-dark" style="width: 20rem">
+            <img
+              src="./assets/img/post.3.jpg"
+              class="card-img opacity-50"
+              style="height: 27rem"
+              alt="..."
+            />
+            <div class="card-img-overlay d-flex align-items-end">
+              <div class="text-light">
+                <h5 class="card-title">Tax Management</h5>
+                <p class="card-text">
+                  Life Tips From Top Ten Adventure Travelers
+                </p>
+                <button class="btn btn-primary btn-md rounded-pill">
+                  View Project
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card text-bg-dark" style="width: 20rem">
+            <img
+              src="./assets/img/post.4.jpg"
+              class="card-img opacity-50"
+              style="height: 27rem"
+              alt="..."
+            />
+            <div class="card-img-overlay d-flex align-items-end">
+              <div class="text-light">
+                <h5 class="card-title">Tax Management</h5>
+                <p class="card-text">
+                  Life Tips From Top Ten Adventure Travelers
+                </p>
+                <button class="btn btn-primary btn-md rounded-pill">
+                  View Project
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!---------------------------------------------- Start of Fifth Section   ----------------------------------------------->
       <section></section>
       <!---------------------------------------------- Start of Sixth Section   ----------------------------------------------->
