--- a/index.html
+++ b/index.html
@@ -4,45 +4,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+            </style>
     <link rel="stylesheet" href="style.css">
     <title>Bootstrap Website</title>
 </head>
 
 <body>
 
-<!----------------------------------- Navigation Menu with fixed position ----------------------------------->
+    <!----------------------------------- Navigation Menu with fixed position ----------------------------------->
     <header>
-
+        <nav class="navbar fixed-top d-flex flex-lg-row justify-content-evenly">
+            <div class="p-2">
+                <p>BrandName</p>
+            </div>
+            <ul class="d-flex flex-lg-row">
+                <li class="p-2">Home</li>
+                <li class="p-2">Product</li>
+                <li class="p-2">Pricing</li>
+                <li class="p-2">Contact</li>
+            </ul>
+            <div class="d-flex flex-lg-row">
+                <p class="p-2">Login</p>
+                <a class="p-2 btn btn-primary" href="#">Become a member &#10142</a>
+            </div>
+        </nav>
     </header>
-<!----------------------------------- Start of First Section or Hero Banner ----------------------------------->
-<main>
+    <!----------------------------------- Start of First Section or Hero Banner ----------------------------------->
+    <main>
+        <section id="section1">
+            <div class="d-grid container text-left">
+                <div class="row">
+                    <h1 class="col">We Ensure A Best Insurance Service</h1>
+                    <div class="col"><span> </span></div>
+                </div>
+                <div class="row">
+                    <p class="col">We know how large objects will act, but things on a small scale</p>
+                    <div class="col"><span> </span></div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <a class="btn btn-primary" style="border-radius: 100px; height: 40px; width: 30%;" href=" #">Get Quote Now</a>
+                        <a class="btn btn-secondary" style="width: 30%" href="#">Learn More</a>
+                    </div>
+                    <div class="col"><span> </span></div>
+                </div>
+            </div>
+        </section>
+        <!---------------------------------------------- Start of Second Section   ----------------------------------------------->
         <section>
 
         </section>
-<!---------------------------------------------- Start of Second Section   ----------------------------------------------->
+        <!---------------------------------------------- Start of Third Section   ----------------------------------------------->
         <section>
 
         </section>
-<!---------------------------------------------- Start of Third Section   ----------------------------------------------->
+        <!---------------------------------------------- Start of Fourth Section   ----------------------------------------------->
         <section>
 
         </section>
- <!---------------------------------------------- Start of Fourth Section   ----------------------------------------------->
+        <!---------------------------------------------- Start of Fifth Section   ----------------------------------------------->
         <section>
 
         </section>
-<!---------------------------------------------- Start of Fifth Section   ----------------------------------------------->
-        <section>
-
-        </section>
-<!---------------------------------------------- Start of Sixth Section   ----------------------------------------------->
+        <!---------------------------------------------- Start of Sixth Section   ----------------------------------------------->
         <section>
 
         </section>
     </main>
-<!---------------------------------------------- Start of Footer Section   ----------------------------------------------->
+    <!---------------------------------------------- Start of Footer Section   ----------------------------------------------->
 </body>
 
 </html>
