--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-            </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
     <link rel="stylesheet" href="style.css">
     <title>Bootstrap Website</title>
 </head>
@@ -20,19 +20,38 @@
 
     <!----------------------------------- Navigation Menu with fixed position ----------------------------------->
     <header>
-        <nav class="navbar fixed-top d-flex flex-lg-row justify-content-evenly">
-            <div class="p-2">
-                <p>BrandName</p>
-            </div>
-            <ul class="d-flex flex-lg-row">
-                <li class="p-2">Home</li>
-                <li class="p-2">Product</li>
-                <li class="p-2">Pricing</li>
-                <li class="p-2">Contact</li>
-            </ul>
-            <div class="d-flex flex-lg-row">
-                <p class="p-2">Login</p>
-                <a class="p-2 btn btn-primary" href="#">Become a member &#10142</a>
+        <nav class="navbar navbar-expand-lg fixed-top d-flex flex-lg-row justify-content-evenly align-items-center ">
+            <div class="container-fluid align-items-center">
+                <a class="navbar-brand" href="#">BrandName</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse text-center ms-auto " id="navbarText" style="text-center">
+                    <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                    </ul> -->
+                    <ul class="navbar-nav w-100">
+                        <li class="p-2 nav-item me-auto">Home</li>
+                        <li class="p-2 nav-item me-auto">Product</li>
+                        <li class="p-2 nav-item me-auto">Pricing</li>
+                        <li class="p-2 nav-item me-auto">Contact</li>
+                        <li class="p-2 nav-item me-auto">Login</li>
+                        <li class="p-2"><a class="p-2 btn btn-primary" href="#">Become a member &#10142</a></li>
+                    </ul>
+                    <!-- <div class="d-flex flex-lg-row ms-auto">
+                        <p class="p-2  nav-item">Login</p>
+                        <a class="p-2 btn btn-primary  nav-item" href="#">Become a member &#10142</a>
+                    </div> -->
+                </div>
             </div>
         </nav>
     </header>
@@ -41,17 +60,18 @@
         <section id="section1">
             <div class="d-grid container text-left">
                 <div class="row">
-                    <h1 class="col">We Ensure A Best Insurance Service</h1>
+                    <h1 class="col display-1">We Ensure A Best Insurance Service</h1>
                     <div class="col"><span> </span></div>
                 </div>
                 <div class="row">
-                    <p class="col">We know how large objects will act, but things on a small scale</p>
+                    <p class="col fs-5" style="">We know how large objects will act, but things on a small scale</p>
                     <div class="col"><span> </span></div>
                 </div>
 
-                <div class="row">
+                <div class="row fs-5 row-cols-1 row-cols-md-2">
                     <div class="col">
-                        <a class="btn btn-primary" style="border-radius: 100px; height: 40px; width: 30%;" href=" #">Get Quote Now</a>
+                        <a class="btn btn-primary h-100" style="border-radius: 100px; width: 30%;" href=" #">Get
+                            Quote Now</a>
                         <a class="btn btn-secondary" style="width: 30%" href="#">Learn More</a>
                     </div>
                     <div class="col"><span> </span></div>
@@ -59,12 +79,77 @@
             </div>
         </section>
         <!---------------------------------------------- Start of Second Section   ----------------------------------------------->
-        <section>
-
+        <section id="section2">
+            <div class="card-group">
+                <div class="card text-center">
+                    <img src="./assets/wallet.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Peace of Mind</h5>
+                        <p class="card-text">So it really behaves like neither. Now we have given up.</p>
+                    </div>
+                </div>
+                <div class="card text-center">
+                    <img src="./assets/bookmark.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Set For Life</h5>
+                        <p class="card-text">They were used to create machines that launched.</p>
+                    </div>
+                </div>
+                <div class="card text-center">
+                    <img src="./assets/persons.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">100% Satisfaction</h5>
+                        <p class="card-text">So it really behaves like neither. Now we have given up.</p>
+                    </div>
+                </div>
+            </div>
         </section>
         <!---------------------------------------------- Start of Third Section   ----------------------------------------------->
-        <section>
+        <section style="background-color: rgb(142, 194, 242) ; align-self:center">
+            <div class="d-flex flex-column" style="font-size: 0.5rem; padding-top: 10%; padding-bottom:3%;">
+                <h1 class="text-center" style="padding-bottom: 1%; font-size: 2.5rem;">
+                    Industry
+                </h1>
+                <p class="text-center" style="font-size: 1rem; padding-left: 25%; padding-right: 25%;">
+                    Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian
+                    mechanics
+                </p>
 
+            </div>
+            <div class="card-group flex-row justify-content-evenly">
+                <div class="d-flex card2 mw-100 " style="width: 500px;">
+                    <img class="position-absolute top-150 start-50 translate-middle" src="./assets/person1.png" alt=""
+                        style="max-width: 70px; height: 70px;">
+                    <div class="card-body2">
+                        <h5 class="card-title text-start">Regina Miles</h5>
+                        <p class="card-text text-start">Designer</p>
+                        <img src="./assets/4stars.jpg" class="card-img-top d-flex justify-content-start mw-100"
+                            alt="..." style="width: 180px; margin-left: -20px;">
+                        <p class="card-text text-start">This proved to be impossible using the traditional
+                            concepts of space and time. Einstein developed a
+                            new view of time first and then space. This proved
+                            to be impossible using the traditional concepts of
+                            space and time. Einstein developed a new view
+                            of time first and then space.</p>
+                    </div>
+                </div>
+                <div class="d-flex card2 mw-100 position-relative" style="width: 500px;">
+                    <img class="position-absolute top-150 start-50 translate-middle" src="./assets/person2.png" alt=""
+                        style="max-width: 70px; height: 70px; top: 20px;">
+                    <div class="card-body2">
+                        <h5 class="card-title text-start">Regina Miles</h5>
+                        <p class="card-text text-start">Designer</p>
+                        <img src="./assets/4stars.jpg" class="card-img-top d-flex justify-content-start mw-100"
+                            alt="..." style="width: 180px; margin-left: -20px;">
+                        <p class="card-text text-start">This proved to be impossible using the traditional
+                            concepts of space and time. Einstein developed a
+                            new view of time first and then space. This proved
+                            to be impossible using the traditional concepts of
+                            space and time. Einstein developed a new view
+                            of time first and then space.</p>
+                    </div>
+                </div>
+            </div>
         </section>
         <!---------------------------------------------- Start of Fourth Section   ----------------------------------------------->
         <section>
