--- a/index.html
+++ b/index.html
@@ -289,7 +289,84 @@
         </section>
       </section>
       <!---------------------------------------------- Start of Sixth Section   ----------------------------------------------->
-      <section></section>
+      <section
+        class="py-5"
+        style="
+          background: url(./assets/img/contact-cover.1.jpg) no-repeat;
+          background-size: cover;
+        "
+      >
+        <div class="container">
+          <h6>Contact Us</h6>
+          <h2>Make an Appointment</h2>
+          <form class="d-grid mt-5">
+            <div class="p-2 col-12 col-md-6 gap-3">
+              <div class="row">
+                <div class="col-12 col-md-6">
+                  <input
+                    class="w-100 mb-2 p-2 border-0 rounded"
+                    type="text"
+                    placeholder="Full Name*"
+                    required
+                  />
+                </div>
+
+                <div class="col-12 col-md-6">
+                  <input
+                    class="w-100 mb-2 p-2 rounded border-0"
+                    type="email"
+                    name=""
+                    id=""
+                    placeholder="Email*"
+                    required
+                  />
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-12 col-md-6">
+                  <select name="" id="" class="w-100 p-2 mb-2">
+                    <option value="" disabled selected>Please select</option>
+                  </select>
+                </div>
+
+                <div class="col-12 col-md-6">
+                  <select class="w-100 p-2" name="" id="">
+                    <option value="" selected disabled>4:00 Available</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="row">
+                <textarea
+                  name=""
+                  id=""
+                  style="height: 140px; resize: none"
+                  class="rounded border-0"
+                  placeholder="Message"
+                ></textarea>
+              </div>
+              <div class="row mt-3">
+                <button class="btn btn-primary align-self-start col-5">
+                  Book Appointment
+                </button>
+              </div>
+            </div>
+            <div class="col-12 col-md-6"></div>
+          </form>
+        </div>
+      </section>
+      <section
+        class="container py-3 d-flex flex-wrap justify-content-between align-items-center bg-white"
+      >
+        <div>
+          <h2>Consulting Agency For Your Business</h2>
+          <p>the quick fox jumps over the lazy dog</p>
+        </div>
+        <div>
+          <button class="btn btn-primary py-2 px-4">Contact Us</button>
+        </div>
+      </section>
     </main>
     <!---------------------------------------------- Start of Footer Section   ----------------------------------------------->
   </body>
