--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse text-center ms-auto " id="navbarText" style="text-center">
+                <div class="collapse navbar-collapse text-center ms-auto" id="navbarText">
                     <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -63,13 +63,13 @@
                     <div class="col"><span> </span></div>
                 </div>
                 <div class="row">
-                    <p class="col fs-5" style="">We know how large objects will act, but things on a small scale</p>
+                    <p class="col fs-5">We know how large objects will act, but things on a small scale</p>
                     <div class="col"><span> </span></div>
                 </div>
 
                 <div class="row fs-5 row-cols-1 row-cols-md-2">
                     <div class="col">
-                        <a class="btn btn-primary h-100" style="border-radius: 100px; width: 30%;" href=" #">Get
+                        <a class="btn btn-primary h-100" style="border-radius: 100px; width: 30%;" href="#">Get
                             Quote Now</a>
                         <a class="btn btn-secondary" style="width: 30%" href="#">Learn More</a>
                     </div>
